@@ -57,10 +57,9 @@ import org.apache.kafka.server.share.persister.PartitionFactory;
 import org.apache.kafka.server.share.persister.PersisterStateBatch;
 import org.apache.kafka.timeline.SnapshotRegistry;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -88,6 +87,7 @@ class ShareCoordinatorShardTest {
     private static final Uuid TOPIC_ID = Uuid.randomUuid();
     private static final Uuid TOPIC_ID_2 = Uuid.randomUuid();
     private static final int PARTITION = 0;
+    private static final SharePartitionKey SHARE_PARTITION_KEY = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
     private static final Time TIME = new MockTime();
 
     public static class ShareCoordinatorShardBuilder {
@@ -143,7 +143,6 @@ class ShareCoordinatorShardTest {
     }
 
     private void writeAndReplayRecord(ShareCoordinatorShard shard, int leaderEpoch) {
-
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
@@ -164,10 +163,15 @@ class ShareCoordinatorShardTest {
         shard.replay(0L, 0L, (short) 0, result.records().get(0));
     }
 
+    private ShareCoordinatorShard shard;
+
+    @BeforeEach
+    public void setUp() {
+        shard = new ShareCoordinatorShardBuilder().build();
+    }
+
     @Test
     public void testReplayWithShareSnapshot() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         long offset = 0;
         long producerId = 0;
         short producerEpoch = 0;
@@ -232,10 +236,39 @@ class ShareCoordinatorShardTest {
     }
 
     @Test
-    public void testWriteStateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
+    public void testWriteFailsOnUninitializedPartition() {
+        WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
+            .setGroupId(GROUP_ID)
+            .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
+                .setTopicId(TOPIC_ID)
+                .setPartitions(List.of(new WriteShareGroupStateRequestData.PartitionData()
+                    .setPartition(PARTITION)
+                    .setStartOffset(0)
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(0)
+                    .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
+                        .setFirstOffset(0)
+                        .setLastOffset(10)
+                        .setDeliveryCount((short) 1)
+                        .setDeliveryState((byte) 0)))))));
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        CoordinatorResult<WriteShareGroupStateResponseData, CoordinatorRecord> result = shard.writeState(request);
+
+        WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toErrorResponseData(
+            TOPIC_ID, PARTITION,
+            Errors.INVALID_REQUEST,
+            ShareCoordinatorShard.WRITE_UNINITIALIZED_SHARE_PARTITION.getMessage()
+        );
+        List<CoordinatorRecord> expectedRecords = List.of();
+
+        assertEquals(expectedData, result.response());
+        assertEquals(expectedRecords, result.records());
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+    }
+
+    @Test
+    public void testWriteStateSuccess() {
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -257,25 +290,144 @@ class ShareCoordinatorShardTest {
         shard.replay(0L, 0L, (short) 0, result.records().get(0));
 
         WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
             GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), TIME.milliseconds())
         ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+        assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
             GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), TIME.milliseconds())
-        ).value().message()), shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
         verify(shard.getMetricsShard()).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
     }
 
     @Test
-    public void testSubsequentWriteStateSnapshotEpochUpdatesSuccessfully() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
+    public void testWriteStateSequentialRequestsWithHigherStateEpochCreateShareSnapshots() {
+        // Makes 3 requests. First 2 with same state epoch, and 3rd with incremented state epoch.
+        // The test config defines number of updates/snapshot as 50. So, this test proves that
+        // a higher state epoch in a request forces snapshot creation, even if number of share updates
+        // have not breached the updates/snapshots limit.
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        int stateEpoch = 1;
+        int snapshotEpoch = 0;
+
+        initSharePartition(shard, SHARE_PARTITION_KEY);
+
+        WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
+            .setGroupId(GROUP_ID)
+            .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
+                .setTopicId(TOPIC_ID)
+                .setPartitions(List.of(new WriteShareGroupStateRequestData.PartitionData()
+                    .setPartition(PARTITION)
+                    .setStartOffset(0)
+                    .setStateEpoch(stateEpoch)
+                    .setLeaderEpoch(0)
+                    .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
+                        .setFirstOffset(0)
+                        .setLastOffset(10)
+                        .setDeliveryCount((short) 1)
+                        .setDeliveryState((byte) 0)))))));
+
+        CoordinatorResult<WriteShareGroupStateResponseData, CoordinatorRecord> result = shard.writeState(request);
+
+        shard.replay(0L, 0L, (short) 0, result.records().get(0));
+
+        snapshotEpoch++;    // Since state epoch increased.
+        WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
+        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), snapshotEpoch, TIME.milliseconds())
+        ));
+
+        assertEquals(1, shard.getShareStateMapValue(SHARE_PARTITION_KEY).snapshotEpoch());
+        assertEquals(expectedData, result.response());
+        assertEquals(expectedRecords, result.records());
+
+        assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), snapshotEpoch, TIME.milliseconds())
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        verify(shard.getMetricsShard()).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
+
+        // State epoch stays same so share update.
+        request = new WriteShareGroupStateRequestData()
+            .setGroupId(GROUP_ID)
+            .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
+                .setTopicId(TOPIC_ID)
+                .setPartitions(List.of(new WriteShareGroupStateRequestData.PartitionData()
+                    .setPartition(PARTITION)
+                    .setStartOffset(0)
+                    .setStateEpoch(stateEpoch)
+                    .setLeaderEpoch(0)
+                    .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
+                        .setFirstOffset(0)
+                        .setLastOffset(10)
+                        .setDeliveryCount((short) 2)
+                        .setDeliveryState((byte) 0)))))));
+
+        result = shard.writeState(request);
+
+        shard.replay(0L, 0L, (short) 0, result.records().get(0));
+
+        expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
+        expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), snapshotEpoch, TIME.milliseconds())
+        ));
+
+        // Snapshot epoch did not increase
+        assertEquals(1, shard.getShareStateMapValue(SHARE_PARTITION_KEY).snapshotEpoch());
+        assertEquals(expectedData, result.response());
+        assertEquals(expectedRecords, result.records());
+
+        assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), snapshotEpoch, TIME.milliseconds())
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        verify(shard.getMetricsShard(), times(2)).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
+
+        // State epoch incremented so share snapshot.
+        request = new WriteShareGroupStateRequestData()
+            .setGroupId(GROUP_ID)
+            .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
+                .setTopicId(TOPIC_ID)
+                .setPartitions(List.of(new WriteShareGroupStateRequestData.PartitionData()
+                    .setPartition(PARTITION)
+                    .setStartOffset(0)
+                    .setStateEpoch(stateEpoch + 1)   // incremented
+                    .setLeaderEpoch(0)
+                    .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
+                        .setFirstOffset(0)
+                        .setLastOffset(10)
+                        .setDeliveryCount((short) 2)
+                        .setDeliveryState((byte) 0)))))));
+
+        result = shard.writeState(request);
+
+        shard.replay(0L, 0L, (short) 0, result.records().get(0));
+
+        snapshotEpoch++;    // Since state epoch increased
+        expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
+        expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), snapshotEpoch, TIME.milliseconds())
+        ));
+
+        // Snapshot epoch increased.
+        assertEquals(2, shard.getShareStateMapValue(SHARE_PARTITION_KEY).snapshotEpoch());
+        assertEquals(expectedData, result.response());
+        assertEquals(expectedRecords, result.records());
+
+        assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), snapshotEpoch, TIME.milliseconds())
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        verify(shard.getMetricsShard(), times(3)).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
+    }
+
+    @Test
+    public void testSubsequentWriteStateSnapshotEpochUpdatesSuccessfully() {
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         WriteShareGroupStateRequestData request1 = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -312,7 +464,7 @@ class ShareCoordinatorShardTest {
         shard.replay(0L, 0L, (short) 0, result.records().get(0));
 
         WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
             GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request1.topics().get(0).partitions().get(0), TIME.milliseconds())
         ));
 
@@ -320,8 +472,8 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedRecords, result.records());
 
         assertEquals(groupOffset(expectedRecords.get(0).value().message()),
-            shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+            shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
 
         result = shard.writeState(request2);
 
@@ -330,7 +482,7 @@ class ShareCoordinatorShardTest {
         expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
         // The snapshot epoch here will be 1 since this is a snapshot update record,
         // and it refers to parent share snapshot.
-        expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotUpdateRecord(
+        expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
             GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request2.topics().get(0).partitions().get(0), TIME.milliseconds())
         ));
 
@@ -338,23 +490,19 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedRecords, result.records());
 
         ShareGroupOffset incrementalUpdate = groupOffset(expectedRecords.get(0).value().message());
-        ShareGroupOffset combinedState = shard.getShareStateMapValue(shareCoordinatorKey);
+        ShareGroupOffset combinedState = shard.getShareStateMapValue(SHARE_PARTITION_KEY);
         assertEquals(incrementalUpdate.snapshotEpoch(), combinedState.snapshotEpoch());
         assertEquals(incrementalUpdate.leaderEpoch(), combinedState.leaderEpoch());
         assertEquals(incrementalUpdate.startOffset(), combinedState.startOffset());
         // The batches should have combined to 1 since same state.
         assertEquals(List.of(new PersisterStateBatch(0, 20, (byte) 0, (short) 1)),
             combinedState.stateBatches());
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testWriteStateInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         int partition = -1;
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -380,16 +528,15 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testWriteNullMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-        shard.onNewMetadataImage(null, null);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        shard.onNewMetadataImage(null, null);
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -414,16 +561,12 @@ class ShareCoordinatorShardTest {
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
-
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(-1, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testWriteStateFencedLeaderEpochError() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         WriteShareGroupStateRequestData request1 = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -460,7 +603,7 @@ class ShareCoordinatorShardTest {
         shard.replay(0L, 0L, (short) 0, result.records().get(0));
 
         WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
             GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request1.topics().get(0).partitions().get(0), TIME.milliseconds())
         ));
 
@@ -468,8 +611,8 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedRecords, result.records());
 
         assertEquals(groupOffset(expectedRecords.get(0).value().message()),
-            shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(5, shard.getLeaderMapValue(shareCoordinatorKey));
+            shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(5, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
 
         result = shard.writeState(request2);
 
@@ -482,14 +625,12 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedRecords, result.records());
 
         // No changes to the leaderMap.
-        assertEquals(5, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(5, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testWriteStateFencedStateEpochError() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         WriteShareGroupStateRequestData request1 = new WriteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -527,15 +668,15 @@ class ShareCoordinatorShardTest {
 
         WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
         List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request1.topics().get(0).partitions().get(0), TIME.milliseconds())
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request1.topics().get(0).partitions().get(0), 1, TIME.milliseconds())
         ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
         assertEquals(groupOffset(expectedRecords.get(0).value().message()),
-            shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(5, shard.getLeaderMapValue(shareCoordinatorKey));
+            shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(5, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
 
         result = shard.writeState(request2);
 
@@ -548,15 +689,34 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedRecords, result.records());
 
         // No changes to the stateEpochMap.
-        assertEquals(1, shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertEquals(1, shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
+    }
+
+    @Test
+    public void testReadFailsOnUninitializedPartition() {
+        ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
+            .setGroupId(GROUP_ID)
+            .setTopics(List.of(new ReadShareGroupStateRequestData.ReadStateData()
+                .setTopicId(TOPIC_ID)
+                .setPartitions(List.of(new ReadShareGroupStateRequestData.PartitionData()
+                    .setPartition(PARTITION)
+                    .setLeaderEpoch(1)))));
+
+        CoordinatorResult<ReadShareGroupStateResponseData, CoordinatorRecord> result = shard.readStateAndMaybeUpdateLeaderEpoch(request);
+
+        assertEquals(ReadShareGroupStateResponse.toErrorResponseData(
+            TOPIC_ID,
+            PARTITION,
+            Errors.INVALID_REQUEST,
+            ShareCoordinatorShard.READ_UNINITIALIZED_SHARE_PARTITION.getMessage()
+        ), result.response());
+
+        assertNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey coordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
@@ -582,15 +742,12 @@ class ShareCoordinatorShardTest {
             )
         ), result.response());
 
-        assertEquals(0, shard.getLeaderMapValue(coordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateSummarySuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey coordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
         ReadShareGroupStateSummaryRequestData request = new ReadShareGroupStateSummaryRequestData()
@@ -611,19 +768,15 @@ class ShareCoordinatorShardTest {
             0
         ), result.response());
 
-        assertEquals(0, shard.getLeaderMapValue(coordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        int partition = -1;
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+        int partition = -1;
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new ReadShareGroupStateRequestData.ReadStateData()
@@ -640,19 +793,15 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
 
         // Leader epoch should not be changed because the request failed.
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateSummaryInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        int partition = -1;
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
+        int partition = -1;
         ReadShareGroupStateSummaryRequestData request = new ReadShareGroupStateSummaryRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
@@ -669,18 +818,15 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
 
         // Leader epoch should not be changed because the request failed.
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadNullMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
+        initSharePartition(shard, SHARE_PARTITION_KEY);
         writeAndReplayDefaultRecord(shard);
 
         shard.onNewMetadataImage(null, null);
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -698,18 +844,15 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
 
         // Leader epoch should not be changed because the request failed.
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testReadStateFencedLeaderEpochError() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         int leaderEpoch = 5;
-
         writeAndReplayRecord(shard, leaderEpoch); // leaderEpoch in the leaderMap will be 5.
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -729,7 +872,7 @@ class ShareCoordinatorShardTest {
 
         assertEquals(expectedData, result.response());
 
-        assertEquals(leaderEpoch, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(leaderEpoch, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
@@ -759,11 +902,11 @@ class ShareCoordinatorShardTest {
         //        -Share leader acks batch 3 and sends the new startOffset and the state of batch 3 to share coordinator.
         //        -Share coordinator writes the snapshot with startOffset 110 and batch 3.
         //        -batch2 should NOT be lost
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder()
-            .setConfigOverrides(Collections.singletonMap(ShareCoordinatorConfig.SNAPSHOT_UPDATE_RECORDS_PER_SNAPSHOT_CONFIG, "0"))
+        shard = new ShareCoordinatorShardBuilder()
+            .setConfigOverrides(Map.of(ShareCoordinatorConfig.SNAPSHOT_UPDATE_RECORDS_PER_SNAPSHOT_CONFIG, "0"))
             .build();
 
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         // Set initial state.
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
@@ -775,7 +918,7 @@ class ShareCoordinatorShardTest {
                     .setStartOffset(100)
                     .setStateEpoch(0)
                     .setLeaderEpoch(0)
-                    .setStateBatches(Arrays.asList(
+                    .setStateBatches(List.of(
                         new WriteShareGroupStateRequestData.StateBatch()    //b1
                             .setFirstOffset(100)
                             .setLastOffset(109)
@@ -800,16 +943,16 @@ class ShareCoordinatorShardTest {
 
         WriteShareGroupStateResponseData expectedData = WriteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
         List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), TIME.milliseconds())
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), 1, TIME.milliseconds())
         ));
 
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
         assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
-            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), TIME.milliseconds())
-        ).value().message()), shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+            GROUP_ID, TOPIC_ID, PARTITION, ShareGroupOffset.fromRequest(request.topics().get(0).partitions().get(0), 1, TIME.milliseconds())
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
         verify(shard.getMetricsShard()).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
 
         // Acknowledge b1.
@@ -861,8 +1004,8 @@ class ShareCoordinatorShardTest {
             .setStartOffset(110)
             .setLeaderEpoch(0)
             .setStateEpoch(0)
-            .setSnapshotEpoch(2)    // since 2nd share snapshot
-            .setStateBatches(Arrays.asList(
+            .setSnapshotEpoch(3)    // since 2nd share snapshot
+            .setStateBatches(List.of(
                 new PersisterStateBatch(110, 119, (byte) 1, (short) 2),  // b2 not lost
                 new PersisterStateBatch(120, 129, (byte) 2, (short) 1)
             ))
@@ -878,15 +1021,15 @@ class ShareCoordinatorShardTest {
 
         assertEquals(groupOffset(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
             GROUP_ID, TOPIC_ID, PARTITION, offsetFinal
-        ).value().message()), shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(0, shard.getLeaderMapValue(shareCoordinatorKey));
+        ).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(0, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
         verify(shard.getMetricsShard(), times(3)).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
     }
 
     @Test
     public void testLastRedundantOffset() {
         ShareCoordinatorOffsetsManager manager = mock(ShareCoordinatorOffsetsManager.class);
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder()
+        shard = new ShareCoordinatorShardBuilder()
             .setOffsetsManager(manager)
             .build();
 
@@ -896,9 +1039,7 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testReadStateLeaderEpochUpdateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -918,7 +1059,7 @@ class ShareCoordinatorShardTest {
             PartitionFactory.UNINITIALIZED_START_OFFSET,
             PartitionFactory.DEFAULT_STATE_EPOCH,
             List.of());
-        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareSnapshotRecord(
+        List<CoordinatorRecord> expectedRecords = List.of(ShareCoordinatorRecordHelpers.newShareUpdateRecord(
             GROUP_ID, TOPIC_ID, PARTITION, new ShareGroupOffset.Builder()
                 .setStartOffset(PartitionFactory.UNINITIALIZED_START_OFFSET)
                 .setLeaderEpoch(2)
@@ -933,14 +1074,14 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertEquals(groupOffset(expectedRecords.get(0).value().message()), shard.getShareStateMapValue(shareCoordinatorKey));
-        assertEquals(2, shard.getLeaderMapValue(shareCoordinatorKey));
+        assertEquals(groupOffset(expectedRecords.get(0).value().message()), shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertEquals(2, shard.getLeaderMapValue(SHARE_PARTITION_KEY));
         verify(shard.getMetricsShard()).record(ShareCoordinatorMetrics.SHARE_COORDINATOR_WRITE_SENSOR_NAME);
     }
 
     @Test
     public void testReadStateLeaderEpochUpdateNoUpdate() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
+        initSharePartition(shard, SHARE_PARTITION_KEY);
 
         ReadShareGroupStateRequestData request1 = new ReadShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
@@ -987,10 +1128,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeleteStateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new DeleteShareGroupStateRequestData.DeleteStateData()
@@ -1019,9 +1156,9 @@ class ShareCoordinatorShardTest {
                 .build()
         );
         shard.replay(0L, 0L, (short) 0, record);
-        assertNotNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNotNull(shard.getLeaderMapValue(shareCoordinatorKey));
-        assertNotNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertNotNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNotNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        assertNotNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
 
         CoordinatorResult<DeleteShareGroupStateResponseData, CoordinatorRecord> result = shard.deleteState(request);
 
@@ -1037,17 +1174,13 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
-        assertNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testDeleteStateUnintializedRecord() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new DeleteShareGroupStateRequestData.DeleteStateData()
@@ -1056,10 +1189,10 @@ class ShareCoordinatorShardTest {
                     .setPartition(PARTITION)))));
 
         CoordinatorResult<DeleteShareGroupStateResponseData, CoordinatorRecord> result = shard.deleteState(request);
-        
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getLeaderMapValue(shareCoordinatorKey));
-        assertNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getLeaderMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
 
         DeleteShareGroupStateResponseData expectedData = DeleteShareGroupStateResponse.toResponseData(TOPIC_ID, PARTITION);
 
@@ -1069,8 +1202,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeleteStateInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         // invalid partition
         int partition = -1;
 
@@ -1094,7 +1225,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeleteNullMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         shard.onNewMetadataImage(null, null);
 
         DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
@@ -1116,7 +1246,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeleteTopicIdNonExistentInMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
 
@@ -1148,7 +1277,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testDeletePartitionIdNonExistentInMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
 
@@ -1186,10 +1314,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testInitializeStateSuccess() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
-        SharePartitionKey shareCoordinatorKey = SharePartitionKey.getInstance(GROUP_ID, TOPIC_ID, PARTITION);
-
         InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
             .setGroupId(GROUP_ID)
             .setTopics(List.of(new InitializeShareGroupStateRequestData.InitializeStateData()
@@ -1200,8 +1324,8 @@ class ShareCoordinatorShardTest {
                     .setStateEpoch(5)))
             ));
 
-        assertNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
 
         CoordinatorResult<InitializeShareGroupStateResponseData, CoordinatorRecord> result = shard.initializeState(request);
         result.records().forEach(record -> shard.replay(0L, 0L, (short) 0, record));
@@ -1215,14 +1339,12 @@ class ShareCoordinatorShardTest {
         assertEquals(expectedData, result.response());
         assertEquals(expectedRecords, result.records());
 
-        assertNotNull(shard.getShareStateMapValue(shareCoordinatorKey));
-        assertNotNull(shard.getStateEpochMapValue(shareCoordinatorKey));
+        assertNotNull(shard.getShareStateMapValue(SHARE_PARTITION_KEY));
+        assertNotNull(shard.getStateEpochMapValue(SHARE_PARTITION_KEY));
     }
 
     @Test
     public void testInitializeStateInvalidRequestData() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         // invalid partition
         int partition = -1;
 
@@ -1275,7 +1397,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testInitializeNullMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         shard.onNewMetadataImage(null, null);
 
         InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
@@ -1299,7 +1420,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testInitializeTopicIdNonExistentInMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
 
@@ -1329,7 +1449,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testInitializePartitionIdNonExistentInMetadataImage() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
 
@@ -1363,7 +1482,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testSnapshotColdPartitionsNoEligiblePartitions() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
         int offset = 0;
@@ -1430,7 +1548,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testSnapshotColdPartitionsSnapshotUpdateNotConsidered() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
         int offset = 0;
@@ -1528,7 +1645,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testSnapshotColdPartitionsDoesNotPerpetuallySnapshot() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
         int offset = 0;
@@ -1603,7 +1719,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testSnapshotColdPartitionsPartialEligiblePartitions() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
         int offset = 0;
@@ -1708,8 +1823,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testOnTopicsDeletedEmptyTopicIds() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
-
         CoordinatorResult<Void, CoordinatorRecord> expectedResult = new CoordinatorResult<>(List.of());
         assertEquals(expectedResult, shard.maybeCleanupShareState(Set.of()));
 
@@ -1720,7 +1833,6 @@ class ShareCoordinatorShardTest {
 
     @Test
     public void testOnTopicsDeletedTopicIds() {
-        ShareCoordinatorShard shard = new ShareCoordinatorShardBuilder().build();
         MetadataImage image = mock(MetadataImage.class);
         shard.onNewMetadataImage(image, null);
 
@@ -1792,5 +1904,21 @@ class ShareCoordinatorShardTest {
             return ShareGroupOffset.fromRecord((ShareSnapshotValue) record);
         }
         return ShareGroupOffset.fromRecord((ShareUpdateValue) record);
+    }
+
+    private void initSharePartition(ShareCoordinatorShard shard, SharePartitionKey key) {
+        shard.replay(0L, 0L, (short) 0, CoordinatorRecord.record(
+            new ShareSnapshotKey()
+                .setGroupId(key.groupId())
+                .setTopicId(key.topicId())
+                .setPartition(key.partition()),
+            new ApiMessageAndVersion(
+                new ShareSnapshotValue()
+                    .setStateEpoch(0)
+                    .setLeaderEpoch(-1)
+                    .setStartOffset(-1),
+                (short) 0
+            )
+        ));
     }
 }
